@@ -90,6 +90,9 @@ dump server call statistics.
 \fBstatus\fR
 server mapped call status list.
 .TP
+\fBtrace\fR \fIon|off|clear\fR
+Set or clear server sip message tracing.
+.TP
 \fBverbose\fR \fIlevel\fR
 set daemon error logging verbosity.
 .SH "EXIT STATUS"
