@@ -1,6 +1,8 @@
 From version 0.7.1 to 0.7.2
 - new server history control to dump recent errlog records from daemon.
 - server option to set size of errlog history.
+- automatically set localnames with hostname by default.
+- activate or end server sip tracing from control interface.
 
 From version 0.7.0 to 0.7.1
 - when ran in pure user mode, do not use system directories or configs.
